# mc-test

./: .gitignore  build.gradle  gradlew  settings.gradle
mc-cpp/: .gitignore  CMakeLists.txt  README.md  run.sh
mc-cpp/.cache/clangd/index/: AABB.cpp.18682385F6383CF6.idx  AABB.cpp.C73419A64A2AC115.idx  AABB.hpp.535D496B391C6502.idx  AABB.hpp.891BEAC1AD65F3AE.idx  AABB.hpp.8F3A5BC98EDBCC0E.idx  Button.cpp.9B814257F94589E0.idx  Button.cpp.A6AB4106BE591D4B.idx  Button.cpp.DB322628226DBD4E.idx  Button.hpp.52EB9762F5A98084.idx  Button.hpp.BB4F5C7CADCFF712.idx  Button.hpp.F23FE8130358316D.idx  Chunk.cpp.2F1300D46EB8EE11.idx  Chunk.cpp.99A069C16AC34BE5.idx  Chunk.hpp.9AFEF0D8A1B17FBB.idx  Chunk.hpp.AF1574141C36F29B.idx  Chunk.hpp.FEF37582D33A9233.idx  ChunkCache.cpp.4C5ED05975D51B07.idx  ChunkCache.cpp.D23106B34BFCA26D.idx  ChunkCache.cpp.EDF45DB6C22B1BBB.idx  Dimension.cpp.13D7806241824DE0.idx  Dimension.cpp.DEFAD21C2A5532A6.idx  Entity.cpp.515FCE894366B053.idx  Entity.cpp.FED8C3DDBCE13A8A.idx  Entity.hpp.5BB7BA54D609C9F5.idx  Entity.hpp.63026067E5696D91.idx  Entity.hpp.8E6D4CCDC0488201.idx  Font.cpp.00C4EE11804597B4.idx  Font.cpp.FEA5BCC6A1347EAC.idx  Font.hpp.1AFAB0F9D7EC006E.idx  Font.hpp.89BDF3CCF09A4FA4.idx  Font.hpp.AA078FAF507992A6.idx  Frustum.cpp.34DF21894AB44328.idx  Frustum.cpp.43D6BD51835F5679.idx  Frustum.hpp.B173640477F9E98D.idx  Frustum.hpp.B671644E6167453B.idx  Frustum.hpp.E40AE67DC5E61738.idx  GameMode.cpp.32F98FA06335D2B8.idx  GameMode.cpp.4DC17CF64804B842.idx  GameMode.cpp.FA4D71D21113D001.idx  GameMode.hpp.5BD1313274C25CBD.idx  (+183 more)
mc-cpp/include/audio/: SoundEngine.hpp
mc-cpp/include/core/: KeyMapping.hpp  Minecraft.hpp  MouseHandler.hpp  Options.hpp  Timer.hpp
mc-cpp/include/entity/: Animal.hpp  Chicken.hpp  Entity.hpp  ItemEntity.hpp  LocalPlayer.hpp  Mob.hpp  PathfinderMob.hpp  Player.hpp
mc-cpp/include/gamemode/: GameMode.hpp
mc-cpp/include/gui/: Button.hpp  Font.hpp  Gui.hpp  InventoryScreen.hpp  OptionsScreen.hpp  PauseScreen.hpp  Screen.hpp  SlideButton.hpp
mc-cpp/include/item/: Inventory.hpp  Item.hpp
mc-cpp/include/particle/: ExplodeParticle.hpp  FlameParticle.hpp  Particle.hpp  ParticleEngine.hpp  SmokeParticle.hpp
mc-cpp/include/pathfinder/: AsyncPathFinder.hpp  BinaryHeap.hpp  Node.hpp  Path.hpp  PathFinder.hpp
mc-cpp/include/phys/: AABB.hpp  HitResult.hpp  Vec3.hpp
mc-cpp/include/renderer/: Chunk.hpp  ChunkMeshBuilder.hpp  ChunkSnapshot.hpp  Frustum.hpp  GLSLTranspiler.hpp  GameRenderer.hpp  LevelRenderer.hpp  MatrixStack.hpp  ShaderManager.hpp  ShaderProgram.hpp  Tesselator.hpp  Textures.hpp  TileRenderer.hpp
mc-cpp/include/renderer/backend/: RenderContext.hpp  RenderDevice.hpp  RenderTypes.hpp  ShaderPipeline.hpp  Texture.hpp  VertexBuffer.hpp
mc-cpp/include/renderer/model/: ChickenModel.hpp  ModelPart.hpp
mc-cpp/include/util/: Mth.hpp  SpatialHash.hpp
mc-cpp/include/world/: Level.hpp  LightingEngine.hpp
mc-cpp/include/world/tile/: Tile.hpp
mc-cpp/shaders/: basic.frag  basic.vert  gui.frag  gui.vert  line.frag  line.vert  sky.frag  sky.vert  world.frag  world.vert
mc-cpp/src/: main.cpp  stb_vorbis_impl.cpp
mc-cpp/src/audio/: SoundEngine.cpp
mc-cpp/src/core/: KeyMapping.cpp  Minecraft.cpp  MouseHandler.cpp  Options.cpp  Timer.cpp
mc-cpp/src/entity/: Animal.cpp  Chicken.cpp  Entity.cpp  ItemEntity.cpp  LocalPlayer.cpp  Mob.cpp  PathfinderMob.cpp  Player.cpp
mc-cpp/src/gamemode/: GameMode.cpp
mc-cpp/src/gui/: Button.cpp  Font.cpp  Gui.cpp  InventoryScreen.cpp  OptionsScreen.cpp  PauseScreen.cpp  Screen.cpp  SlideButton.cpp
mc-cpp/src/item/: Inventory.cpp  Item.cpp
mc-cpp/src/particle/: ExplodeParticle.cpp  FlameParticle.cpp  Particle.cpp  ParticleEngine.cpp  SmokeParticle.cpp
mc-cpp/src/pathfinder/: AsyncPathFinder.cpp  Path.cpp  PathFinder.cpp
mc-cpp/src/phys/: AABB.cpp  HitResult.cpp  Vec3.cpp
mc-cpp/src/renderer/: Chunk.cpp  ChunkMeshBuilder.cpp  ChunkSnapshot.cpp  Frustum.cpp  GLSLTranspiler.cpp  GameRenderer.cpp  LevelRenderer.cpp  MatrixStack.cpp  ShaderManager.cpp  ShaderProgram.cpp  Tesselator.cpp  Textures.cpp  TileRenderer.cpp
mc-cpp/src/renderer/backend/: RenderContext.cpp  RenderDevice.cpp
mc-cpp/src/renderer/backend/metal/: MTLRenderContext.cpp  MTLRenderContext.hpp  MTLRenderDevice.cpp  MTLRenderDevice.hpp  MTLShaderPipeline.cpp  MTLShaderPipeline.hpp  MTLTexture.cpp  MTLTexture.hpp  MTLVertexBuffer.cpp  MTLVertexBuffer.hpp  MetalBridge.h  MetalBridge.mm  MetalCppImpl.cpp  ShaderCache.cpp  ShaderCache.hpp
mc-cpp/src/renderer/backend/opengl/: GLRenderContext.cpp  GLRenderContext.hpp  GLRenderDevice.cpp  GLRenderDevice.hpp  GLShaderPipeline.cpp  GLShaderPipeline.hpp  GLTexture.cpp  GLTexture.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp
mc-cpp/src/renderer/model/: ChickenModel.cpp  ModelPart.cpp
mc-cpp/src/util/: Mth.cpp  SpatialHash.cpp
mc-cpp/src/world/: ChunkCache.cpp  Dimension.cpp  Level.cpp  LevelChunk.cpp  LightingEngine.cpp
mc-cpp/src/world/levelgen/: PerlinNoise.cpp  RandomLevelSource.cpp
mc-cpp/src/world/tile/: Tile.cpp  Tiles.cpp
src/main/java/: Encoder.java  WorldGenProfiler.java
src/main/java/com/mojang/nbt/: CompoundTag.java  EndTag.java  ListTag.java  NbtIo.java  Tag.java
src/main/java/net/minecraft/: Facing.java  SharedConstants.java
src/main/java/net/minecraft/client/: BackgroundDownloader.java  CrashInfoPanel.java  Lighting.java  MemoryTracker.java  Minecraft.java  MinecraftApplet.java  MouseHandler.java  OpenGLCapabilities.java  Options.java  ProgressRenderer.java  Screenshot.java  StopGameException.java  Timer.java
src/main/java/net/minecraft/client/gamemode/: SecretMode.java  SecretModeLevelListener.java  XperiaMode.java
src/main/java/net/minecraft/client/gui/: ChatScreen.java  CustomJFileChooser.java  DeathScreen.java  Font.java  Gui.java  GuiComponent.java  (+4 more)
src/main/java/net/minecraft/isom/: IsomPreview.java  ZoneRenderer.java
src/main/java/net/minecraft/network/: Connection.java
src/main/java/net/minecraft/world/: MouseInventoryClickHandler.java  SimpleContainer.java
src/main/java/util/: IntHashMap.java  LongHashMap.java  Mth.java
(+258 files in other folders)
